--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ body {
     height: 100vh;
 }
 
+a {
+    text-decoration: none;
+}
+
 .leftImage {
     background-image: url("../images/mainPageImage.png");
     background-repeat: no-repeat;
