--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -37,3 +37,24 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+button{
+    all: unset;
+    border: none;
+    margin: 5px;
+    padding: 5px;
+    width: 75%;
+    height: 50px;
+    text-align: center;
+}
+
+.buttonEnter, .buttonCreateAccount{
+    background-color: darkgoldenrod;
+    color: white;
+}
+
+input{
+    width: 400px;
+    height: 50px;
+    margin: 10px;
+}
