--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@ html, body, * {
 }
 
 body {
-    display: flex;
+    /* display: flex; */
     height: 100vh;
 }
 
@@ -19,11 +19,15 @@ a {
     background-repeat: no-repeat;
     background-position: center;
     width: 50vw;
+    height: 100vh;
 }
 
 .mainPage {
     background-color: antiquewhite;
     width: 50vw;
+    position: fixed;
+    top: 0px;
+    right: 0px;
 }
 
 .mainPageVoid {
@@ -48,13 +52,31 @@ button{
     text-align: center;
 }
 
-.buttonEnter, .buttonCreateAccount{
+.buttonEnter, .buttonCreateAccount, .logoutBtn{
     background-color: darkgoldenrod;
     color: white;
+}
+
+.logoutBtn{    
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    width: 100px;
+    height: 25px;
 }
 
 input{
     width: 400px;
     height: 50px;
     margin: 10px;
+}
+
+#form_messages{
+    display: inline-block;
+    position: fixed;
+    margin-top: 100px;
+}
+
+table{
+    width: 100vw;
 }
