--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,16 +1,22 @@
 html, body, * {
-    margin: 2px;
+    margin: 0px;
     padding: 0px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
 }
 
 body {
     height: 100vh;
+    background-image: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    /* background-attachment: fixed; */
 }
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 .leftImage {
@@ -22,7 +28,7 @@ a {
 }
 
 .mainPage {
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     width: 50vw;
     position: fixed;
     top: 0px;
@@ -30,11 +36,22 @@ a {
 }
 
 .mainPageVoid {
-    height: 50vh;
+    height: 35vh;
+}
+
+.mainMessage, .createAccountMessage{
+    color: #4912a3;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.createAccount{
+    color: #4912a3;
+    font-weight: 500;
 }
 
 .mainPageLogin, .createAccountPage, form {
-    height: 50vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,7 +69,7 @@ button{
 }
 
 .buttonEnter, .buttonCreateAccount, .logoutBtn{
-    background-color: darkgoldenrod;
+    background-color: #f57123;
     color: white;
 }
 
@@ -68,6 +85,10 @@ input{
     width: 400px;
     height: 50px;
     margin: 10px;
+}
+
+input[type=submit]{
+    cursor: pointer;
 }
 
 .userInputs{
