--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 html, body, * {
-    margin: 0px;
+    margin: 2px;
     padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
@@ -11,6 +11,12 @@ html, body, * {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+h1{
+    color: #4912a3;
+    font-weight: 700;
+    font-size: 50px;
 }
 
 a {
@@ -55,7 +61,7 @@ a {
     align-items: center;
 }
 
-button{
+.buttonEnter, .buttonCreateAccount, .logoutBtn{
     all: unset;
     border: none;
     margin: 5px;
@@ -63,11 +69,12 @@ button{
     width: 75%;
     height: 50px;
     text-align: center;
-}
-
-.buttonEnter, .buttonCreateAccount, .logoutBtn{
     background-color: #f57123;
     color: white;
+}
+
+.buttonEnter:hover, .buttonCreateAccount:hover, .logoutBtn:hover{
+    background-color: #f3a77c;
 }
 
 .divForm{
@@ -78,8 +85,9 @@ button{
     position: fixed;
     top: 0px;
     right: 0px;
-    width: 100px;
-    height: 25px;
+    width: 120px;
+    height: 35px;
+    margin-top: 15px;
 }
 
 input{
@@ -92,6 +100,17 @@ input[type=submit]{
     cursor: pointer;
 }
 
+td{
+    text-align: center;
+    width: 50px;
+}
+
+.editDeleteBtn{
+    width: 150px;
+    cursor: pointer;
+    margin: 10px
+}
+
 .userInputs{
     display: flex;
     flex-direction: column;
@@ -102,12 +121,16 @@ input[type=submit]{
 #form_messages{
     display: inline-block;
     position: fixed;
-    top: 50px;
+    top: 100px;
 }
 
 table{
     width: 100vw;
     margin-top: 50px;
     position: fixed;
-    top: 100px;
+    top: 150px;
+}
+
+tr{
+    box-shadow: 0px 1px 0px 0px darkgray;
 }
