--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,13 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    overflow: hidden;
+    overflow: visible;
+}
+
+@media (min-width: 768px) { 
+    body {
+        overflow: hidden;
+    }
 }
 
 h1{
