--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,7 @@ html, body, * {
     font-size: 25px;
 }
 
-body {
-    height: 100vh;
+.bodyIndex {
     background-image: url("../images/background.jpg");
     background-size: cover;
     background-position: center;
@@ -68,38 +67,12 @@ a {
 }
 
 .buttonEnter, .buttonCreateAccount, .logoutBtn{
-    /* all: unset;
-    border: none;
-    margin: 5px;
-    padding: 5px;
-    width: 75%;
-    height: 50px;
-    text-align: center; */
     background-color: #f57123;
     color: white;
 }
 
 .buttonEnter:hover, .buttonCreateAccount:hover, .logoutBtn:hover{
     background-color: #f3a77c;
-}
-
-.divForm{
-    margin-bottom: 500px;
-}
-
-.logoutBtn{    
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    width: 120px;
-    height: 35px;
-    margin-top: 15px;
-}
-
-input{
-    width: 400px;
-    height: 50px;
-    margin: 10px;
 }
 
 input[type=submit]{
@@ -117,18 +90,18 @@ input[type=submit]{
     margin: 10px
 }
 
-.userInputs{
+/* .userInputs{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
 
-#form_messages{
+/* #form_messages{
     display: inline-block;
     position: fixed;
     top: 100px;
-}
+} */
 
 /* table{
     width: 100vw;
