--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@ html, body, * {
     font-size: 25px;
 }
 
-.bodyIndex {
+body {
     background-image: url("../images/background.jpg");
     background-size: cover;
     background-position: center;
