delete messages with modal

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 @media (min-width: 768px) { 
     body {
-        overflow: hidden;
+        /* overflow: hidden; */
         background-repeat: no-repeat;
     }
 }
