fix background on messages.html

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,9 +12,14 @@ body {
     overflow: visible;
 }
 
+.bodyMessages{
+    overflow: visible;
+    background-repeat: round;
+}
+
 @media (min-width: 768px) { 
     body {
-        /* overflow: hidden; */
+        overflow: hidden;
         background-repeat: no-repeat;
     }
 }
