overflow hidden on index.html

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,7 +19,7 @@ body {
 
 @media (min-width: 768px) { 
     body {
-        /* overflow: hidden; */
+        overflow: hidden;
         background-repeat: no-repeat;
     }
 }
